Speculative PlayStation build fix following 253447@main https://bugs.webkit.org/show_bug.cgi?id=243968

Unreviewed, add missing include.

* Source/WebCore/Modules/reporting/ReportingObserver.cpp:

Canonical link: https://commits.webkit.org/253451@main